<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SecureNotes</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="baracca_software">Baracca Software</string>

    <!-- Stringhe per la iniziale activity -->
    <string name="app_name_2">Secure Notes</string>
    <string name="disabled">Disabled</string>
    <string name="accedi">Enter</string>
    <string name="annulla">Cancel</string>
    <string name="signin">Sign in</string>
    <string name="no_more_input">You Have been entered too many wrong passwords: access denied for 30 seconds</string>
    <string name="esito_ok">OK!</string>
    <string name="esito_no">Wrong Password!</string>
    <string name="freeze_activity">Inserting Disabled</string>
    <string name="hint_edtx">password…</string>
    <string name="empty_input_field">You must insert a password</string>
	<string name="login_text">Login</string>
	<string name="register_new_user">Registrazione utente</string>
	
    <!-- Stringhe per l'activity notes -->
    <string name="title_activity_notes">Notes</string>
    <string name="add_value">Add Note</string>
    <string name="search_action_bar_label">Search</string>
    <string name="error_write_db">Problem to write on DB</string>
    <string name="error_update_db">Problem to update DB</string>
    <string name="undobar_message">Note Deleted</string>
    <string name="undo">Undo</string>
    <string name="image_view_presentation">imgimg</string>
    <string name="action_export">Export Notes</string>
    <string name="action_inport">Import Notes</string>
    <string name="error_export_db">Can\'t read External storage</string>
    <string name="loading_notes">Loading Notes…</string>
    <string name="exporting_notes">Export Notes…</string>
    <string name="import_notes">Import Notes…</string>
    <string name="export_ok">Export</string>
    <string name="import_ok">Import</string>
    <string name="text_import_notes">To import notes you must be sure that your password is the same as the one used to encrypt them</string>
    <string name="generated_file">Generated file: </string>
    <string name="import_ok_esito">Import Completed:</string>
    <string name="wait_for_update_note">You have updated password, wait for updating notes into DB</string>
    <string name="updating_completed">Notes updated into DB</string>
    <string name="error_import_note">Problem to import notes. Check Password. </string>
    <string name="refresh_note">Refresh Notes</string>
    <string name="refreshing_note">Refresh in progress\.\.\.</string>
    <string name="refresh_completed">Refresh Completed!</string>
    <string name="sure_delete_note">Are you sure to delete note? </string>
    <string name="ok_ok">OK</string>

    <!-- stringhe per activity preferences -->
    <string name="title_activity_settings"> Settings</string>
    <string name="imposta_password">Set Password</string>
    <string name="second_to_wait_for_finish">Auto lock Secure Notes after</string>
    <string name="desc_preferences_second_to_wait_for_finish">After switching to another app, how long shold SecureNotes stay unlocked?</string>
    <string name="name_encryption_algorithms">Algorithm to encrypt data</string>
    <string name="desc_encryption_algorithms">Choose Algorithm to encrypt Password and Data</string>
    <string name="enable_auto_lock">Enable autolock</string>
    <string name="summary_enable_auto_lock">Lock App if close it</string>

    <string-array name="seconds_wait">
        <item name="5">5 seconds</item>
        <item name="10">10 seconds</item>
        <item name="30">30 seconds</item>
        <item name="60">60 seconds</item>
    </string-array>
    <string-array name="seconds_wait_values">
        <item name="5">5</item>
        <item name="10">10</item>
        <item name="30">30</item>
        <item name="60">60</item>
    </string-array>
    <string-array name="encryption_algorithms">
        <item name="pbkdf2">PBKDF2</item>
        <item name="pkcs12">PKCS#12</item>
    </string-array>
    <string-array name="encryption_algorithms_values">
        <item name="pbkdf2">0</item>
        <item name="pkcs12">1</item>
    </string-array>

    <string name="security_menu">Security</string>
    <string name="other_menu">Others</string>
    <string name="about_bs">About BaraccaSoftware</string>
    <string name="about_sn">About SecureNotes</string>

    <!-- stringhe per l'activity password -->
    <string name="title_activity_password">PasswordActivity</string>
    <string name="ins_password">Please insert a new password</string>
    <string name="reins_password">Confirm password</string>
    <string name="ins_old_password">Insert current password</string>
    <string name="hint_ins_password">New password</string>
    <string name="hint_old_password">Current Password</string>
    <string name="annulla_button">Cancel</string>
    <string name="ok_button">Save</string>
    <string name="attenzione_password_obbligatoria">The password must be inserted before to proceed</string>
    <string name="password_impostata">Password set</string>
    <string name="password_diverse">Please check your input</string>
    <string name="titolo_alert_dialog_nuova_password">Set password</string>
    <string name="titolo_alert_dialog_mod_password">Modify Password</string>

    <!-- stringhe per activity addnote -->
    <string name="title_activity_add_note">New Note</string>
    <string name="title_activity_add_note_mod">Update Note</string>
    <string name="add_title"><b>Title</b></string>
    <string name="add_text"><i>Note</i></string>
    <string name="device_camera">devicecamera</string>
    <string name="sure_delete_img">Are you sure to delete image? </string>
    <string name="img_deleted">Image deleted</string>
    <string name="element_data_modified">Modified</string>
    <string name="today_mod">Today</string>
    <string name="yesterday_mod">Yesterday</string>

    <string-array name="choices_img">
        <item name="delete_img">Delete Image</item>
    </string-array>

    <string name="title_activity_info">InfoActivity</string>
    <string name="tips_title_add_note">Add a new Note</string>
    <string name="tips_add_note">Click on \"+\" button to add a new note</string>
    <string name="show_tips">show_tips</string>
    <string name="tips_title_hidden_note">Hide note</string>
    <string name="tips_hide_note">Press on \"^\"  to hide current note</string>
    <string name="help_menu">Help</string>
    <string name="show_hints">Screens suggestion</string>
    <string name="summary_hints">Choose to display hint screens</string>
    <string name="tips_unlock_time_tile">Autolock Time</string>
    <string name="tips_unlock">Go to settings menu to choose, after the activity has been closed, how much time must pass before the app is removed from background applications</string>
    <string name="title_alert_dialog_locked_app">App Locked</string>
    <string name="unlock_app_positive_button">Unlock</string>
    <string name="title_note_list">Notes</string>
    <string name="title_note_detail">Note Detail</string>
    <string name="empty_passwords">Empty Password</string>
    <string name="different_password">Passwords don\'t match</string>
    <string name="menuitem_refresh">Refresh</string>
    <string name="note_saved">Note Saved</string>
    <string name="last_modified_data">Last Modified</string>
    <string name="no_title">No Name</string>
    <string name="no_desc">No Description</string>
    <string name="secure_question">Security Question</string>
    <string name="answer_question">Answer</string>
    <string name="save_answer">Save</string>
    <string name="title_security_question_dialog">Create Security Question</string>
    <string name="retrieve_password"><u>Retrieve Password</u></string>
    <string name="secure_question_saved">Secure Question saved</string>
    <string name="set_retrieve_password_setting">Set Retrieve Password</string>
    <string name="about_retrieve_password">Set a secure question to retrieve your password</string>
    <string name="title_retrieve_password_dialog">Obtain Password</string>
    <string name="response_text">Response:</string>
    <string name="no_available_question">No available  question</string>
    <string name="the_password_is">The password is</string>
    <string name="response_incorrect">Response is incorrect</string>
    <string name="get_password">Get password</string>
    <string name="save_note">Save Note</string>
    <string name="get_photo">Take photo</string>

</resources>
