<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/airport_menuRefresh"
        android:icon="@drawable/ic_menu_refresh"
        android:title="@string/menuitem_refresh"
        android:orderInCategory="1"
        android:showAsAction="always" />

	<item android:id="@+id/action_add"
          android:icon="@android:drawable/ic_menu_add"
          android:title="@string/add_value"
          android:showAsAction="ifRoom" />
	<item
        android:id="@+id/search_action_bar_item"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search_action_bar_label"
        android:showAsAction="ifRoom|collapseActionView"
        android:actionLayout="@layout/search_layout"
    />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

    <item
        android:id="@+id/action_export"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_export"/>

    <item
        android:id="@+id/action_import"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_inport"/>

</menu>
