<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/imageView"
        android:background="@drawable/artwork"
        android:contentDescription="@string/about_bs"
        android:layout_below="@+id/access_text_view"
        android:layout_centerHorizontal="true" />

    <EditText
        android:background="@drawable/apptheme_edit_text_holo_light"
        android:id="@+id/editText_password"
        android:hint="@string/hint_edtx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp">
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView_appname2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_2"
        android:textSize="45sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/access_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:textSize="45sp"
        android:layout_below="@+id/textView_appname2"
        android:layout_centerHorizontal="true" />


    <Button
        android:id="@+id/button_accedi"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/accedi"
        android:background="@drawable/rounded_border_red"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/retrieve_password"
        android:onClick="onClick"
        android:clickable="true"
        android:id="@+id/retrieve_password_text"
        android:layout_below="@+id/editText_password"
        android:layout_centerHorizontal="true" />

</RelativeLayout>